Fixed modal overlay cutoff

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,5 +1,5 @@
 .modal {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -122,10 +122,10 @@
 
 @media screen and (max-width: 760px) {
   .modal__container {
-    width: 350px;
+    width: fit-content;
   }
   .modal__input {
-    max-width: 350px;
+    max-width: fit-content;
   }
   .modal__close__btn {
     left: 380px;
